@@ -60,6 +60,7 @@ AC_CHECK_FUNCS([memset rint strtol pow sqrt])
 # check boost
 
 AX_BOOST_BASE([1.32.0])
+AX_BOOST_SYSTEM
 AX_BOOST_PROGRAM_OPTIONS
 CPPFLAGS="$CPPFLAGS $BOOST_CPPFLAGS"
 LDFLAGS="$LDFLAGS $BOOST_LDFLAGS"
