@@ -1,3 +1,11 @@
+2011-11-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* configure.ac:
+	* m4/ax_boost_system.m4:
+	* m4/ax_boost_base.m4:
+	* m4/ax_boost_program_options.m4:
+	- fixed boost detection problems.
+
 2011-08-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/main.cpp:
